# FarmaManage

./: .gitignore  CMakeLists.txt  FarmaManage.cpp  TOP  testing.cpp
UI/: mainUI.h  medicUI.h
backups/: medicos-file.txt  medicosCode-file.txt  medicosName-file.txt
git/: .gitignore
headers/: color.hpp  consultas.h  diagnostico.h  domicilio.h  fecha.h  hora.h  indextuple.h  medicamento.h  medicos-file.h  medicos.h  nombre.h  pacientes.h  pacientesFile.h
sources/: consultas-file.cpp  medicos-file.h
